terraform-gke/app/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo
  namespace: default
spec:
  selector:
    matchLabels:
      run: demo
  template:
    metadata:
      labels:
        run: demo
    spec:
      containers:
      - image: gcr.io/core-catalyst-283702/nuevopython-helloworld
        imagePullPolicy: IfNotPresent
        name: demo
        ports:
        - containerPort: 5000
          protocol: TCP
