terraform-gke/app/12service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: default
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    run: demo
  type: NodePort
